Done: LicenceCheck Based On Admin and Size Check Base On the Licence File